# mobileclaw

./: .gitignore  CLAUDE.md  Cargo.toml  FFI_COVERAGE_ANALYSIS.md
docs/architecture/: agent-memory-survey.md  memory-management-analysis.md  memory-optimization-design.md
docs/bug-fixed/: 2026-04-02-llm-tool-calls.md  2026-04-03-flutter-chat-text-display.md
docs/cc-evaluation/: findings.md  progress.md  task_plan.md
docs/design/: 00-architecture.md  02-memory-design.md  04-testing.md  05-flutter-interface.md
docs/superpowers/plans/: 2026-04-01-email-skill.md  2026-04-01-flutter-provider-ui.md  2026-04-01-mobileclaw-cli.md  2026-04-01-mobileclaw-ffi-phase2.md  2026-04-01-mobileclaw-mvp.md  2026-04-01-mobileclaw-phase3-android.md  2026-04-01-multi-provider-llm.md  2026-04-02-memory-optimization.md
docs/superpowers/specs/: 2026-04-01-mobileclaw-design.md  2026-04-01-multi-provider-llm-design.md  2026-04-04-camera-perf-logging-design.md
mobileclaw-cli/: Cargo.toml  build.rs
mobileclaw-cli/docs/: BENCH_ANALYSIS.md  bench_prompts.json  bench_prompts_50turns.json  bench_prompts_memory_search.json  bench_prompts_tool_e2e.json  usage.md
mobileclaw-cli/src/: env_parser.rs  main.rs  session.rs
mobileclaw-cli/src/cmd/: bench.rs  chat.rs  email.rs  mod.rs  provider.rs
mobileclaw-core/: Cargo.toml  build.rs
mobileclaw-core/docs/: 01-security-model.md  03-tool-design.md  04-testing.md  05-flutter-interface.md  06-dev-standards.md  07-camera-monitoring-design.md
mobileclaw-core/docs/superpowers/plans/: 2026-04-03-camera-monitoring.md
mobileclaw-core/docs/tests/: COVERAGE_REPORT.md  integration-camera-test-design.md
mobileclaw-core/src/: error.rs  ffi.rs  frb_generated.rs  lib.rs
mobileclaw-core/src/agent/: context_manager.rs  loop_impl.rs  mod.rs  parser.rs  session.rs  token_counter.rs
mobileclaw-core/src/llm/: client.rs  mod.rs  ollama.rs  openai_compat.rs  probe.rs  provider.rs  types.rs
mobileclaw-core/src/memory/: mod.rs  sqlite.rs  traits.rs  types.rs
mobileclaw-core/src/secrets/: mod.rs  store.rs  types.rs
mobileclaw-core/src/skill/: loader.rs  manager.rs  mod.rs  types.rs
mobileclaw-core/src/tools/: mod.rs  permission.rs  registry.rs  traits.rs
mobileclaw-core/src/tools/builtin/: camera.rs  email.rs  file.rs  http.rs  memory_tools.rs  mod.rs  system.rs
mobileclaw-core/tests/: integration_agent.rs  integration_camera.rs  integration_email.rs  integration_ffi.rs  integration_memory.rs  integration_provider.rs  integration_tools.rs
mobileclaw-flutter/apps/mobileclaw_app/: README.md  pubspec.yaml
mobileclaw-flutter/apps/mobileclaw_app/android/: .gitignore
mobileclaw-flutter/apps/mobileclaw_app/android/app/: build.gradle.kts
mobileclaw-flutter/apps/mobileclaw_app/android/app/src/main/: AndroidManifest.xml
mobileclaw-flutter/apps/mobileclaw_app/android/app/src/main/kotlin/com/mobileclaw/mobileclaw_app/: MainActivity.kt
mobileclaw-flutter/apps/mobileclaw_app/integration_test/: camera_real_capture_test.dart  camera_test.dart  email_account_test.dart
mobileclaw-flutter/apps/mobileclaw_app/integration_test/helpers/: test_env.dart
mobileclaw-flutter/apps/mobileclaw_app/ios/Runner/: Info.plist
mobileclaw-flutter/apps/mobileclaw_app/ios/Runner.xcodeproj/: project.pbxproj
mobileclaw-flutter/apps/mobileclaw_app/lib/: main.dart
mobileclaw-flutter/apps/mobileclaw_app/lib/core/: engine_provider.dart  logger.dart
mobileclaw-flutter/apps/mobileclaw_app/lib/features/chat/: chat_page.dart
mobileclaw-flutter/apps/mobileclaw_app/lib/features/providers/: onboarding_screen.dart  provider_form_screen.dart  provider_list_screen.dart  provider_models.dart  provider_notifier.dart
mobileclaw-flutter/apps/mobileclaw_app/lib/features/settings/: settings_page.dart
mobileclaw-flutter/apps/mobileclaw_app/linux/: CMakeLists.txt
mobileclaw-flutter/apps/mobileclaw_app/linux/flutter/: generated_plugins.cmake
mobileclaw-flutter/apps/mobileclaw_app/linux/runner/: my_application.cc
mobileclaw-flutter/apps/mobileclaw_app/macos/Runner.xcodeproj/: project.pbxproj
mobileclaw-flutter/apps/mobileclaw_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobileclaw-flutter/apps/mobileclaw_app/macos/Runner/Configs/: AppInfo.xcconfig
mobileclaw-flutter/apps/mobileclaw_app/scripts/: run_integration_tests.sh
mobileclaw-flutter/apps/mobileclaw_app/test/: app_routing_test.dart  widget_test.dart
mobileclaw-flutter/apps/mobileclaw_app/test/features/providers/: onboarding_screen_test.dart  provider_form_screen_test.dart  provider_list_screen_test.dart  provider_notifier_test.dart
mobileclaw-flutter/apps/mobileclaw_app/test/features/settings/: settings_page_test.dart
mobileclaw-flutter/apps/mobileclaw_app/web/: index.html  manifest.json
mobileclaw-flutter/apps/mobileclaw_app/windows/: CMakeLists.txt
mobileclaw-flutter/apps/mobileclaw_app/windows/runner/: Runner.rc  main.cpp
mobileclaw-flutter/docs/: 01-architecture.md  02-performance.md  03-security.md  04-api-contract.md  05-flutter-email-test-cases.md
mobileclaw-flutter/docs/tests/: flutter-integration-test-design.md
mobileclaw-flutter/mclaw_cli/: README.md  pubspec.yaml
mobileclaw-flutter/mclaw_cli/lib/: main.dart
mobileclaw-flutter/mclaw_cli/linux/: CMakeLists.txt
mobileclaw-flutter/mclaw_cli/linux/runner/: my_application.cc
mobileclaw-flutter/mclaw_cli/test/: widget_test.dart
tests/docs/: FFI_DART_TEST_FINDINGS.md  core-blackbox-test-design.md
tests/integration/tests/: cross_layer.rs
tests/rustcore-blackbox/: Cargo.toml
tests/rustcore-blackbox/tests/: cross_layer.rs
tools/: README.md  analyze_tool_e2e.py  dump_memory.py  e2e_tool_accuracy.sh
