[workspace]
resolver = "2"
members = ["mobileclaw-core"]

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
quick-xml   = { version = "0.36", features = ["serialize"] }
url         = "2"
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rusqlite    = { version = "0.31", features = ["bundled", "backup"] }
tracing     = "0.1"
anyhow      = "1"
thiserror   = "1"
futures     = "0.3"
eventsource-stream = "0.2"
regex       = "1"
glob        = "0.3"
# dev / test
proptest    = "1"
mockall     = "0.13"
tempfile    = "3"
tokio-test  = "0.4"
