[package]
name    = "mobileclaw-integration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mobileclaw-core = { path = "../../mobileclaw-core", features = ["test-utils"] }
tokio       = { workspace = true }
async-trait = { workspace = true }
serde_json  = { workspace = true }
futures     = { workspace = true }
tempfile    = { workspace = true }
